--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -11,13 +11,33 @@ on:
         type: string
 
 jobs:
-  # This workflow contains a single job called "greet"
-  greet:
-    # The type of runner that the job will run on
+  build:
+
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Runs a single command using the runners shell
-    - name: Send greeting
-      run: echo "Hello ${{ inputs.name }}"
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        
+    - name: Run Scraper
+      run: |
+        python scraper.py
+
+    # Runs a set of commands using the runners shell
+    - name: push to origin master
+      run: |
+        echo start push
+        git config --global user.name "bonfy"
+        git config --global user.email "foreverbonfy@163.com"
+        
+        git add -A
+        git commit -m $(date '+%Y-%m-%d')
+        git push
