--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
     inputs:
       name:
-        description: 'Person to greet'
+        description: 'Scan Trending'
         default: 'Scan-Trending'
         required: true
         type: string
@@ -35,8 +35,8 @@ jobs:
     - name: push to origin master
       run: |
         echo start push
-        git config --global user.name "bonfy"
-        git config --global user.email "foreverbonfy@163.com"
+        git config --global user.name "pascall"
+        git config --global user.email "zhangjie@pascall.cn"
         
         git add -A
         git commit -m $(date '+%Y-%m-%d')
