--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -34,6 +34,7 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: Commit files
       run: |
+        echo ${{ secrets.GITHUB_TOKEN }}
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
         git add -A
